Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132278

lupdate does not see translate macros in inherited classes template parameter list

    XMLWordPrintable

Details

    • 0f2db7658 (dev)

    Description

      For example it fails to pick up "text" in this case:

      #include <iostream>
      #include <QObject>
      
      template<std::size_t N>
      struct string_literal
      {
          constexpr string_literal(const char (&)[N]) noexcept { }
      };
      template<string_literal d>
      struct A
      {};
      
      struct B : A<QT_TRANSLATE_NOOP("Context", "text")> {};
      
      int main(int argc, char *argv[])
      {}
      

      Attachments

        For Gerrit Dashboard: QTBUG-132278
        # Subject Branch Project Status CR V

        Activity

          People

            masoud.jami Masoud Jami
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes