lupdate: parse translate commands in template definitions

Add parsing capability for translate commands in template definitions.
Translate commands that show up in a template definition are ignored
by the parser of lupdate. An example of this case can be found in the
attached bug report.

Fixes: QTBUG-132278
Change-Id: I36296ec4df75f8ce824cfa59fa00060beb3cd99c
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>